--- a/dashboard/scoreboard.html
+++ b/dashboard/scoreboard.html
@@ -97,8 +97,8 @@
 		<paper-input label="P2 name" class="nameInput" id="p2input"></paper-input>
 	</div>
 	<div class="layout horizontal">
-		<nodecg-typeahead-input label="P1 Country" replicant-name="countries" id="p1country" class="input"></nodecg-typeahead-input>
-		<nodecg-typeahead-input label="P2 Country" replicant-name="countries" id="p2country" class="input"></nodecg-typeahead-input>
+		<nodecg-typeahead-input label="P1 Flag" replicant-name="countries" id="p1country" class="input"></nodecg-typeahead-input>
+		<nodecg-typeahead-input label="P2 Flag" replicant-name="countries" id="p2country" class="input"></nodecg-typeahead-input>
 	</div>
 	<div class="layout horizontal">
 		<paper-button id="p1update" raised style="background-color: #008AFF; min-width: 125px;">Update P1 info</paper-button>
