--- a/dashboard/scoreboard.html
+++ b/dashboard/scoreboard.html
@@ -137,7 +137,11 @@
 
 	//Flags are hardcoded into this array.
 	countries.value = ["Ocelot_Left",
-		"Pipo_Left"
+		"Ocelot_Right",
+		"Pipo_Left",
+		"Pipo_Right",
+		"Team_Solid",
+		"Team_Liquid"
 	];
 	
 	p1score.on('change', (newValue, oldValue) => {
