--- a/dashboard/scoreboard.html
+++ b/dashboard/scoreboard.html
@@ -93,19 +93,19 @@
 		</div>
 	</div>
 	<div class="layout horizontal">
-		<paper-input label="P1 name" class="nameInput" id="p1input"></paper-input>
-		<paper-input label="P2 name" class="nameInput" id="p2input"></paper-input>
+		<paper-input label="Team 1 name" class="nameInput" id="p1input"></paper-input>
+		<paper-input label="Team 2 name" class="nameInput" id="p2input"></paper-input>
 	</div>
 	<div class="layout horizontal">
-		<nodecg-typeahead-input label="P1 Flag" replicant-name="countries" id="p1country" class="input"></nodecg-typeahead-input>
-		<nodecg-typeahead-input label="P2 Flag" replicant-name="countries" id="p2country" class="input"></nodecg-typeahead-input>
+		<nodecg-typeahead-input label="Team 1 Logo" replicant-name="countries" id="p1country" class="input"></nodecg-typeahead-input>
+		<nodecg-typeahead-input label="Team 2 Logo" replicant-name="countries" id="p2country" class="input"></nodecg-typeahead-input>
 	</div>
 	<div class="layout horizontal">
-		<paper-button id="p1update" raised style="background-color: #008AFF; min-width: 125px;">Update P1 info</paper-button>
+		<paper-button id="p1update" raised style="background-color: #008AFF; min-width: 125px;">Update Team 1</paper-button>
 		<paper-button id="bothUpdate" raised style="background-color: #00BEBE; min-width: 125px;">Update both</paper-button>
-		<paper-button id="p2update" raised style="background-color: #FF4200; min-width: 125px;">Update P2 info</paper-button>
+		<paper-button id="p2update" raised style="background-color: #FF4200; min-width: 125px;">Update Team 2</paper-button>
 	</div>
-	<paper-input label="Tourney stage" class="nameInput" id="stageInput"></paper-input>
+	<paper-input label="Relay Name" class="nameInput" id="stageInput"></paper-input>
 	<!--
 	<div id="nextm">Next Match</div>
 	<div class="layout horizontal">
